--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,10 @@ body {
 main {
     max-width: 750px;
 }
+
+button {
+    padding: 0;
+    margin: 0;
+    background: transparent;
+    border: 0;
+}
